--- a/scripts/utils.gradle
+++ b/scripts/utils.gradle
@@ -1,4 +1,6 @@
 import java.text.SimpleDateFormat
+import java.util.regex.Matcher
+import java.util.regex.Pattern
 
 println("======================> utils.gradle: ")
 /**
@@ -10,6 +12,9 @@ ext {
     releaseTime= this.&releaseTime
     currentData= this.&currentData
     getFlavorsInfo = this.&getFlavorsInfo
+    checkCurFlavor = this.&checkCurFlavor
+    getCurrentFlavor = this.&getCurrentFlavor
+    getFlavorName = this.&getFlavorName
 }
 
 /**
@@ -52,6 +57,87 @@ def releaseTime() {
 
 def currentData() {
     return new SimpleDateFormat("yy_MM_dd").format(new Date())
+}
+
+/**
+ * 打包或者debug运行时获得当前的flavorName！！
+ * @return
+ */
+def checkCurFlavor() {
+    Gradle gradle = getGradle()
+    String tskReqStr = gradle.getStartParameter().getTaskRequests().toString()
+
+    println("=======================> tskReqStr:" + tskReqStr)
+    println("=======================> rootProject name:" + project.getName())
+    Pattern pattern;
+
+    if (tskReqStr.contains("assemble")) {
+        pattern = Pattern.compile("assemble(\\w+)(Release|Debug|Beta)")
+    } else if (tskReqStr.contains("generate")) {
+        pattern = Pattern.compile("generate(\\w+)(Release|Debug|Beta)")
+    }
+    else if (tskReqStr.contains("bundle")) {
+        pattern = Pattern.compile("bundle(\\w+)(Release|Debug|Beta)")
+    } else {
+        pattern = Pattern.compile("generate(\\w+)(Release|Debug|Beta)")
+    }
+
+    Matcher matcher = pattern.matcher(tskReqStr)
+
+    if (matcher.find()) {
+        rootProject.currentFlavor = getFlavorName(curVariantsName = firstLowerCase(matcher.group(1)))
+        println("=======================> rootProject.currentFlavor: " +  rootProject.currentFlavor)
+        println("=======================> curVariantsName.toLowerCase()---->${curVariantsName.toLowerCase()},group------------>${getCurrentFlavor(rootProject).group.toLowerCase()}")
+        if (!curVariantsName.toLowerCase().startsWith(getCurrentFlavor(rootProject).group.toLowerCase())) {
+            throw new IllegalStateException("your group is not same with your buildVariants!")
+        }
+        println("=======================> checkCurFlavor------->${rootProject.curVariantsName},currentFlavor=${rootProject.curVariantsName}")
+    } else {
+        println("=======================> checkCurFlavor------->NO MATCH FLAVOR FOUND")
+    }
+}
+
+def getCurrentFlavor(rootProject) {
+    println("=======================> getCurrentFlavor.rootProject.currentFlavor------->" + rootProject.currentFlavor)
+    return getProductInfoByName(rootProject.currentFlavor, rootProject)
+}
+
+def getProductInfoByName(name, rootProject) {
+    println("=======================> name------->" + name)
+    for (Map.Entry entry : rootProject.productConfig) {
+        if (entry.key == name) {
+            println("=======================> returnreturn------->" + entry.key)
+            return entry.value;
+        }
+    }
+}
+
+String firstLowerCase(String s){
+    if(Character.isLowerCase(s.charAt(0)))
+        return s;
+    else{
+        char[] chars = s.toCharArray();
+        chars[0] += 32;
+        return String.valueOf(chars);
+    }
+}
+
+/**
+ * 获得真实渠道名称
+ * @param mergeFlavorName
+ * @return
+ */
+String getFlavorName(String mergeFlavorName){
+    if (!mergeFlavorName)
+        return "";
+    return mergeFlavorName
+            .toLowerCase()
+            .replaceAll("google", "")
+            .replaceAll("market", "")
+            .replaceAll("debug", "")
+            .replaceAll("release", "")
+            .replaceAll("test","")
+            .replaceAll("android", "");
 }
 
 
