--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "scripts/version.gradle"
 apply from : file('scripts/utils.gradle')
 apply from : file('scripts/flavorsConfig.gradle')
 
